<resources>
    <string name="app_name">"Noteb00k"</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create a new Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="login" translatable="false">Login</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="new_user">New user?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account_to_continue">Create account to continue</string>
    <string name="repeat_password">Re-password</string>
    <string name="email" translatable="false">Email</string>
    <string name="have_you_account">Already have an account?</string>
    <string name="navigation_drawer_open" translatable="false">navigation_drawer_open</string>
    <string name="navigation_drawer_close" translatable="false">navigation_drawer_close</string>
    <string name="sign_up_to_continue">Sign Up to continue</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_notes">Notes</string>
    <string name="title_settings">Settings</string>
    <string name="title_tags">Tags</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="create_note">Create Note</string>
    <string name="create">Create</string>
</resources>
