<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:id="@+id/icon_signup"
        android:background="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_below="@id/icon_signup"
        android:layout_marginTop="10dp"
        android:id="@+id/text_welcome"
        style="@style/foreground_text"
        android:text="@string/welcome"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_welcome"
        android:layout_marginTop="5dp"
        android:id="@+id/text_below_welcome_signup"
        style="@style/second_plan_text"
        android:text="@string/sign_up_to_continue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edittext_login_signup"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="4dp"
        android:id="@+id/textView_login_signUp"
        style="@style/second_plan_text"
        android:text="@string/login"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/textview_email_signup"
        android:layout_marginBottom="7dp"
        style="@style/edittext_blue"
        android:id="@+id/edittext_login_signup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edittext_email_signup"
        android:layout_marginLeft="4dp"
        android:id="@+id/textview_email_signup"
        style="@style/second_plan_text"
        android:text="@string/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/textview_password_signup"
        android:layout_marginBottom="7dp"
        style="@style/edittext_blue"
        android:id="@+id/edittext_email_signup"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edittext_password_signup"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="4dp"
        android:id="@+id/textview_password_signup"
        style="@style/second_plan_text"
        android:text="@string/password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/textview_repassword_signup"
        android:layout_marginBottom="7dp"
        style="@style/edittext_blue"
        android:id="@+id/edittext_password_signup"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edittext_repassword_signup"
        android:layout_marginLeft="4dp"
        android:id="@+id/textview_repassword_signup"
        style="@style/second_plan_text"
        android:text="@string/repeat_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/button_signun_signup"
        android:layout_marginBottom="20dp"
        style="@style/edittext_blue"
        android:id="@+id/edittext_repassword_signup"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/internal_relativelayout"
        android:layout_marginBottom="10dp"
        android:id="@+id/button_signun_signup"
        style="@style/button_signin"
        android:gravity="center"
        android:onClick="signUpClicked"
        android:text="@string/sign_up"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/internal_relativelayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:id="@+id/textview_already_have_account_signup"
            style="@style/second_plan_text"
            android:text="@string/have_you_account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textview_already_have_account_signup"
            android:layout_marginLeft="2dp"
            style="@style/second_plan__blue_text"
            android:onClick="goToSignInClicked"
            android:text="@string/sign_in"/>
    </RelativeLayout>

</RelativeLayout>