<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/view_dialog"
        android:background="@color/colorYellow"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_note"
            style="@style/white_text"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/title_dialog"
        style="@style/edittext_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_dialog"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/title"
        android:textColorHint="@color/colorSeparator" />

    <EditText
        android:id="@+id/description_dialog"
        style="@style/edittext_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_dialog"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/description"
        android:textColorHint="@color/colorSeparator" />

    <Button
        android:id="@+id/dialog_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/description_dialog"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/yellow"
        android:text="@string/create" />

</RelativeLayout>